--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <script src="./rock-paper-scissors.js"></script>
+    <meta charset="utf-8">
+    <title>Rock, Paper, Scissors!</title>
+    <script src="./rock-paper-scissors.js" defer></script>
   </head>
   <body>
+    <button class="options">Rock</button>
+    <button class="options">Paper</button>
+    <button class="options">Scissors</button>
   </body>
 </html>
