Switch from console display of results to div

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <button class="options">Rock</button>
     <button class="options">Paper</button>
     <button class="options">Scissors</button>
+    <div id="round">Round 1</div>
+    <div id="results"></div>
   </body>
 </html>
