Update UI for each round played and point scored
Change HTML divs so the numbers are easier to manipulate in JS. Also
track points scored and remove buttons from UI when either score
reaches 5.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <button class="options">Rock</button>
     <button class="options">Paper</button>
     <button class="options">Scissors</button>
-    <div id="round">Round 1</div>
-    <div id="results"></div>
+    <div>Round <span id="round">1</span></div>
+    <div><span id="playerScore">0</span> - <span id="computerScore">0</span></div>
+    <div id="roundResults"></div>
+    <div id="matchResults"></div>
   </body>
 </html>
